# all-the-predictions

./: .gitignore  pyproject.toml
atp/: base_extractor.py  base_job.py  player_id_corrections.py  rankings.py  schemas.py
atp/pipelines/: atptour.py
atp/tournament/: discovery.py  match_stats.py  overview.py  results.py  schedule.py  tournament.py
tests/: test_base_job.py  test_overview_transformer.py  test_results.py  test_schedule.py  test_schemas.py  test_tournament.py
