[project]
name = "all-the-predictions"
version = "0.1.0"
description = "Data pipeline and prediction model for Tennis matches"
authors = [
    {name = "hopfing",email = "167368581+hopfing@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "atp" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
