[project]
name = "all-the-predictions"
version = "0.1.0"
description = "Data pipeline and prediction model for Tennis matches"
authors = [
    {name = "hopfing",email = "167368581+hopfing@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "atp" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
